--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,34 @@
-Jinja2==3.1.5
-itsdangerous==2.2.0
+# Flask 및 핵심 패키지 (Python 3.10 호환 버전)
+Flask==2.0.3
 Werkzeug==2.0.3
-Flask==1.1.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+itsdangerous==2.0.1
+click==8.0.4
+
+# Flask 확장 패키지
 Flask-CORS==3.0.10
 Flask-Login==0.5.0
 Flask-Migrate==4.0.4
 Flask-MQTT==1.2.1
 Flask-RESTful==0.3.9
 Flask-Restless==0.17.0
-Flask-SocketIO==5.5.1
+Flask-SocketIO==5.3.0
 flask-sqlalchemy==2.5.1
 Flask-Script==2.0.6
 
+# 데이터베이스
 sqlalchemy==1.4.46
+mysqlclient==2.1.0
+
+# 유틸리티
 python-dateutil==2.9.0
 requests==2.32.3
 beautifulsoup4==4.12.3
-mysqlclient==2.1.0
 pytz==2022.1
+
+# 비동기 처리
 gevent==22.10.2
 greenlet==3.1.1
+python-socketio==5.8.0
+python-engineio==4.5.1
