--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/slider": "^5.1.1",
-    "@react-native-picker/picker": "^2.11.4",
+    "@react-native-community/slider": "5.0.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/stack": "^7.6.14",
@@ -23,12 +23,13 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.30.0",
+    "react-native-gesture-handler": "2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-screens": "4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "socket.io-client": "^4.8.3"
   },
   "private": true
