--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,10 +19,12 @@
     "expo": "~54.0.31",
     "expo-linear-gradient": "^15.0.8",
     "expo-status-bar": "~3.0.9",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
